Closed Bug 32853 Opened 24 years ago Closed 24 years ago

HTMLLabelElement.setAttribute() doesn't work for htmlFor attribute

Categories

(Core :: DOM: Core & HTML, defect, P3)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: ckritzer, Assigned: jst)

Details

Attachments

(1 file)

Overview:  HTMLLabelElement.setAttribute("htmlFor","input1") does not set the
'for' attribute to 'input1'.

Steps to Reproduce:
1) Launch a 2000-03-21-06-nb1b Commercial build on MacOS, Win32, or Linux
2) Load attached testcase into a browser window.

Actual Results: 'for' attribute is not set.

Expected Results: 'for' attribute is set to 'input1'

Platforms Found On/Test:
- MacOS9 2000-03-21-06-nb1b Commercial build
- Linux6 2000-03-21-06-nb1b Commercial build
- Win98 2000-03-21-06-nb1b Commercial build

Additional Comments:  None at this time.
Setting Self to QAContact.
QA Contact: gerardok → ckritzer
Target Milestone: ---
Fix checked in. Marking FIXED.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Marking VERIFIED FIXED on:
- MacOS9 2000-07-14-11-M17 Commercial
- Linux6 2000-07-14-21-M17 Commercial
- Win98  2000-07-14-09-M17 Commercial
Status: RESOLVED → VERIFIED
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: