Fix for bug #32853, we now support setting the 'for' attribute with the name 'htmlFor'.